Se agrega soporte JPA, se mapean modelos y se limita un autor por libro.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://${DBHOSTPG}/literalura
+spring.datasource.username=${DBUSERPG}
+spring.datasource.password=${DBPASSPG}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
